Fix part of current frame in frame reel is cut off during playback

--- a/app/css/animator.css
+++ b/app/css/animator.css
@@ -336,9 +336,12 @@ a {
 #area-frame-reel > table.hidden { display: none; }
 
 /* Image container */
+td:first-of-type .frame-reel-preview {
+  padding-left: 0.25em;
+}
 .frame-reel-preview {
   position: relative;
-  padding-left: 0.25em;
+  padding-right: 0.25em;
 }
 
 /* Preview image */
